<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".ui.RegisterProductActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/swis721mdbt"
        android:paddingBottom="12dp"
        android:text="@string/register_your_new"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/swis721mdbt"
        android:text="@string/product"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:fontFamily="@font/swis721mdbt"
        android:paddingTop="20dp"
        android:text="@string/all_fields_are_required"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/signup_box"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:errorTextAppearance="@style/errorAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/eTxt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorWhite"
                android:ellipsize="end"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/swiss721bt_light"
                android:hint="@string/product_name"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:errorTextAppearance="@style/errorAppearance"

            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            app:layout_constraintVertical_chainStyle="packed">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/eTxt_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorWhite"
                android:ellipsize="end"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/swiss721bt_light"
                android:hint="@string/product_weight"
                android:inputType="numberDecimal"
                android:maxLength="50"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:errorTextAppearance="@style/errorAppearance"
            app:layout_constraintEnd_toEndOf="@+id/txt_weight"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_weight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/eTxt_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorWhite"
                android:ellipsize="end"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/swiss721bt_light"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"
                android:maxLength="50"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/swz721m"
            android:gravity="center_vertical|bottom"
            android:paddingBottom="8dp"
            android:text="pounds"
            android:textColor="@color/colorWhite"
            android:textColorHint="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_price"
            app:layout_constraintTop_toTopOf="@+id/txt_price" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/colorWhite"

            android:textColorHint="@color/colorWhite"
            app:errorTextAppearance="@style/errorAppearance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_price">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/eTxt_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorWhite"
                android:ellipsize="end"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/swiss721bt_light"
                android:hint="@string/product_description"
                android:inputType="text"
                android:maxLines="10"
                android:scrollHorizontally="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="#fff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/swz721m"
            android:gravity="center_vertical|bottom"
            android:paddingBottom="8dp"
            android:text="grams"
            android:textColor="@color/colorWhite"
            android:textColorHint="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_weight"
            app:layout_constraintTop_toTopOf="@+id/txt_weight" />


    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/swis721mdbt"
        android:padding="12dp"
        android:text="@string/save_product"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:srcCompat="@drawable/ic_icons8_vegan_food" />
</android.support.constraint.ConstraintLayout>